Removed PermGen parameters. Fixed startup scripts to run Carbon on in Java 8